...
 */
object AddPointsMapScreenTestTags {

  //-------------------
  // Buttons
  //-------------------
  const val CONFIRM_BUTTON = "ConfirmButton"
  const val CANCEL_BUTTON = "CancelButton"

  //-------------------
  // Input Fields
  //-------------------
  const val POINT_NAME_FIELD = "PointNameField"
...
